css/cash.css
/* Cash app
----------- */

.icon16.c-table { background-image: url('../img/icon16-table.png'); background-size: 16px 16px; }
i.icon16.color { width: 12px; height: 12px; border: none; }
ul.menu-v i.icon16.color { margin: 1px 6px 1px -18px; }

.c-chart { clear: right; }

.c-transactions { padding: 10px 0; }
.c-transactions .c-table-header { min-height: 2rem; }
.c-transactions .c-actions-menu .c-bulk-action { display: none; }
.c-transactions .c-actions-menu.fixed { position:  fixed; top: 0; background: white; display: block; width: 100%; padding: 12px 0; box-shadow: 0 15px 10px -10px #eee; }
.c-transactions .c-action-add-income { background: #dec; border-radius: 2px; }
.c-transactions .c-action-add-expense { background: #fdd; border-radius: 2px; }
.c-transactions table { margin-top: 10px; }
.c-transactions table .c-planned { color: #999; }
.c-transactions table i.color { margin-top: 2px; margin-right: 6px; }
/* .c-transactions table h5.heading { margin: 1rem 0 0.5rem; } */
.c-transactions table tr.c-table-divider { border-bottom: 1px solid #ddd; }
.c-transactions table tr.c-table-divider td { padding-top: 1.5rem; padding-bottom: 0.5rem; }
.c-transactions table span { cursor: pointer; }
.c-transactions .c-totals p { font-size: 0.9rem; margin-top: 1rem; }
.c-transactions .c-totals .c-category-total { display: inline-block; margin: 0 0.5rem; }
.c-transactions .c-totals .c-category-total i.color { margin-top: 3px; margin-right: 3px; }

.c-balance { color: brown; background: gold; padding: 1px 4px; border-radius: 2px; }
/* .c-balance.highlighted {  } */
.c-balance.c-negative { background: orangered; color: white; }

.c-account-icon-list { margin: -10px -10px 15px; width: 95%; }
.c-account-icon-list a { display: inline-block; padding: 7px; }
.c-account-icon-list a.selected { background-color: #eee; }

.c-category-color { width: 250px; margin-top: -3px; }
.c-category-color a i.icon16.color { width: 18px; height: 18px; border: 3px solid #fff; margin-right: 0; margin-bottom: 0.5rem; }
.c-category-color a.selected i.icon16.color { border-color: #000; }

.c-import-progress { padding-left: 20px; color: #aaa; }
.c-import-progress li.completed { color: #000; }
.c-import-progress li.current { font-weight: bold; color: #000; }
.c-import-preview .c-parsed-rows { position: relative; max-width: 80%; max-height: 300px; overflow: hidden; }
.c-import-preview .c-parsed-rows-content { overflow: scroll; max-height: 300px; }
.c-import-preview .c-parsed-rows-shader { position: absolute; bottom: 0; left: 0; right: 0; height: 30%; background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); }
table.c-import-conditions  { margin-bottom: 0; }
table.c-import-conditions td { padding: 5px; }
table.c-import-conditions td .c-condition { background: #eee; padding: 2px 3px 1px; color: #888; }

.c-settings-columns { display: flex; margin-top: -10px; }
.c-settings-columns .c-column { flex: 0 1 200px; padding-right: 50px; padding-left: 16px; }
.c-settings-columns .c-ousted-sort-icon { position: relative; left: -20px; }

.icon16.c-table { background-image: url('../img/icon16-table.png'); background-size: 16px 16px; }
.icon16.c-repeating { background-image: url('../img/repeating-glyph.png'); background-size: 16px 16px; opacity: 0.65; }

@media
(-webkit-min-device-pixel-ratio: 2),
(min-resolution: 192dpi) {
    .icon16.c-table { background-image: url('../img/icon16-table@2x.png'); background-size: 16px 16px; }
}

